@@ -1,3 +1,8 @@
+2004-07-03    <jeff@mini.nerble.net>
+
+	* cheat.cc (public): When creating an object with <insert>, place
+	it on the ground instead of in inventory.
+
 2004-06-29    <jeff@mini.nerble.net>
 
 	* actors.cc: Teleport NPC to schedule if not on current map.
